// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentItem component should render correctly 1`] = `
<Hoc
  destroyOnUnmount={true}
  enableReinitialize={true}
  forceUnregisterOnUnmount={false}
  form="PaymentItemForm"
  forwardedRef={null}
  getFormState={[Function]}
  keepDirtyOnReinitialize={false}
  paymentInfo={
    Object {
      "icon": "",
      "subText": "",
      "text": "You have not added a credit card yet.",
      "title": "Default Credit Card",
      "variation": "Add",
    }
  }
  persistentSubmitErrors={false}
  pure={true}
  shouldAsyncValidate={[Function]}
  shouldError={[Function]}
  shouldValidate={[Function]}
  shouldWarn={[Function]}
  submitAsSideEffect={false}
  touchOnBlur={true}
  touchOnChange={false}
  updateUnregisteredFields={false}
  validate={[Function]}
/>
`;

exports[`PaymentItem component should render correctly with values 1`] = `
<Hoc
  destroyOnUnmount={true}
  enableReinitialize={true}
  forceUnregisterOnUnmount={false}
  form="PaymentItemForm"
  forwardedRef={null}
  getFormState={[Function]}
  keepDirtyOnReinitialize={false}
  paymentInfo={
    Object {
      "icon": 4,
      "subText": "expires 1/2021",
      "text": "ending in 1111",
      "title": "Default Credit Card",
      "variation": "Edit",
    }
  }
  persistentSubmitErrors={false}
  pure={true}
  shouldAsyncValidate={[Function]}
  shouldError={[Function]}
  shouldValidate={[Function]}
  shouldWarn={[Function]}
  submitAsSideEffect={false}
  touchOnBlur={true}
  touchOnChange={false}
  updateUnregisteredFields={false}
  validate={[Function]}
/>
`;
